add layout and placeholder

--- a/index.html
+++ b/index.html
@@ -13,9 +13,69 @@
 <body>
   <div class="container">
     <section>
-      <h1>title</h1>
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Id commodi sit quae, explicabo totam, ducimus debitis impedit a ex culpa ipsa! Sit quod non, perspiciatis ipsa neque esse. Nemo quidem id, illum nobis, a obcaecati. Nobis earum expedita perspiciatis consequuntur quis neque alias dolore a ducimus odio asperiores, fugit repellat!</p>
-      <img src="https://api.fnkr.net/testimg/1280x200/00CED1/FFF/?text=img+placeholder">
+      <p>深夜兩點，小明被滂沱大雨給吵醒，看著窗外，雨水模糊了視野。
+        <br>心裏不禁擔心著，房子裏會不會淹水呢？這樣的恐懼隨著雨水敲打而逐漸地放大，但小明也只能蜷縮在床腳，
+        <br>望著窗外卻什麼也做不了，害怕睜開眼睛便是水淹腳目，一夜無眠。</p>
+      <p>儘管早已離鄉背井，居所更迭，這樣的恐懼卻隨著小明而走，每次下起大雨，害怕就揮之不去。
+        <br> 您也曾有這樣的擔憂嗎？那你也許可以看看這份地圖，認識家園所處的災害潛勢。
+      </p>
+      <div id="hero-img"></div>
+      <hr>
+      <p>隨著天氣開始炎熱，台灣的雨季也逐漸到了。
+        <br>每年五月到九月，梅雨和颱風的接力，滋潤的台灣的土地，
+        <br>但也是台灣民眾的夢魘，雨水可以灌溉，但雨水也能成災。同時，在台灣的自然災害也不僅於此。</p>
+      <p>我們以政府提供的資料，繪製台南地區災害潛勢地圖，包含土壤液化、山崩、地滑以及淹水潛勢。
+      </p>
+    </section>
+    <section>
+      <h1>你家是災害潛勢區嗎？</h1>
+      <div id="well-living-map"><img src="https://api.fnkr.net/testimg/1280x400/00CED1/FFF/?text=map"></div>
+      <p>圖表說明 我對發言隊伍想像一塊重量我，吃了聽到開了集團方向展示住了要是三大違法方，這種節省答案錯誤夢想質量爭取幽默事實上將其查詢文化成果快捷，睡覺提問作品維持表明幾個進去供應告，畫面你會本月突出高校，運輸進行複製四川中文始終取得兩人包括瀏覽次，女孩眼光都要周邊於是國外門口語音不禁開發舉報一人中文沒有，廣播到底出發手裡中央，是不是機票售價採取選手語言電信添加問道香港增強相同畢業迅，和平體育接下來遼寧一位，照。</p>
+    </section>
+    <section>
+      <h1>什麼是土壤液化、山崩、地滑？</h1>
+      <ul class="responsive-list">
+        <li>
+          <img src="https://api.fnkr.net/testimg/423x100/00CED1/FFF/?text=two">
+          <h2>土壤液化</h2>
+          <h3>誘因：地震</h3>
+          <p>實際要有足夠並沒有檢查消失勝利研究所華人人民幣組，二十接受電影機場有人網通，還不優秀出版主板兩個連載把你充滿社會，幫忙技能敵人備案節省主體這種現代免費電影，三人特殊不去評級開發，出發紅色諾基亞各級犯罪解決收益，能在心裡帳號現象財務但我黑色病人，在那裡台灣描述加入時間有限公司運行環境促銷大小認為詳細增，團結街道全面圖書是他位於自從免費電影學院生命和平的說求購市。</p>
+        </li>
+        <li>
+          <img src="https://api.fnkr.net/testimg/423x100/00CED1/FFF/?text=mountain">
+          <h2>山崩</h2>
+          <h3>誘因：地震、暴雨</h3>
+          <p>合作河北形勢主持留學信息化瀏覽不太女性女兒帶來，美國魔法聽說某種操作系統觀眾檢驗各種家裡簡直出現歡迎風險，外觀品質進一步版主重點本，還有故事原創尊重不怕廣西總部，下一頁三人文本消除其他一條姓名工程師好好奇怪，各種交流圖象那個基本大概深圳紛紛輕易少年植物，國產軟件並不是已有神話，給他單位之處尤其是對外玩家，品質可愛一對元素站在您現在每月您可以變化檔案主動壓。</p>
+        </li>
+        <li>
+          <img src="https://api.fnkr.net/testimg/423x100/00CED1/FFF/?text=hwa">
+          <h2>地滑</h2>
+          <h3>誘因：地震、暴雨</h3>
+          <p>傳說自主整理除了事務對話買賣配件發貼就要華人做什麼身後，生氣一是語文怎麼會對他改造是，一座的錢職工而是靈活作者優化主動企，奇怪可能會還不醫生我真開展體驗高考大，我現在用來當前你的有了同意大約大概機器心靈真正都沒，大概美好權限說了失望真是公安碩士昨天可，分類本頁原理平方米有時候素質不好意思特價給我針對審批一。</p>
+        </li>
+      </ul>
+      <h3 class="sep">如果我家在災害潛勢區，我可以做什麼？</h3>
+      <ul class="responsive-list">
+        <li>
+          <p>有一定外觀深深最重要所屬告訴你組合好看但在本公，怎麼辦不斷從此一份全國，郵政編碼先進其中您可以不好眾多強調沒事快捷不見來自溫，一樣全新水果多少實力機構現，我真遺憾父親說什麼即可曝光如此外面正在所有美好員工本地蒐集金，最快帳號即使工人庫存別。</p>
+        </li>
+        <li>
+          <p>主任說話制定毫無自我高速是以文檔壓縮辛苦高中基地依舊安，是什麼產業人類不管法國型號相關內容蘋果維護就不出發衛生習慣此，適用日前專欄對面登陸產生女生一直教程更大對於福建考研當，點這裡下載的說上路請教導演身材，政策農村集體家人現實解釋轎車蘋果更加短信股權增強支付如果雲南，徹底歡迎光臨購物如何事項大廈辦法希望。</p>
+        </li>
+        <li>
+          <p>行政第一章資格領域人們祝福除了回答新華網最新伊拉克外貿未來，條款瀏覽器得知拍攝規定電話站點交流效率工作人員騎士事件家庭已，精美知道衝突公佈第一章，取得為此學會規則請求，究竟迅速這場有人哪些網際快車，最為不在一般忘記只要版權發現房子許，作用步驟文明我家衝突預測，更為案件不得不幹部適用新增寬頻首先接觸天地加速強烈購物祝福。</p>
+        </li>
+      </ul>
+    </section>
+    <section>
+      <h1>參考資料與延伸閱讀</h1>
+      <ol>
+        <li>Lorem ipsum dolor sit amet.</li>
+        <li>Lorem ipsum dolor sit amet.</li>
+        <li>Lorem ipsum dolor sit amet.</li>
+        <li>Lorem ipsum dolor sit amet.</li>
+        <li>Lorem ipsum dolor sit amet.</li>
+      </ol>
     </section>
   </div>
 </body>
