add map with geojson polygon

--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
   <link rel="stylesheet" href="./lib/normalize.min.css">
   <title> 台南市宜居地圖 </title>
   <link rel="stylesheet" href="./dist/css/index.css">
+  <script src="https://unpkg.com/leaflet@1.0.3/dist/leaflet.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+  <link rel="stylesheet" href="https://unpkg.com/leaflet@1.0.3/dist/leaflet.css" />
 </head>
 
 <body>
@@ -29,26 +32,26 @@
     </section>
     <section>
       <h1>你家是災害潛勢區嗎？</h1>
-      <div id="well-living-map"><img src="https://api.fnkr.net/testimg/1280x400/00CED1/FFF/?text=map"></div>
+      <div id="well-living-map"></div>
       <p>圖表說明 我對發言隊伍想像一塊重量我，吃了聽到開了集團方向展示住了要是三大違法方，這種節省答案錯誤夢想質量爭取幽默事實上將其查詢文化成果快捷，睡覺提問作品維持表明幾個進去供應告，畫面你會本月突出高校，運輸進行複製四川中文始終取得兩人包括瀏覽次，女孩眼光都要周邊於是國外門口語音不禁開發舉報一人中文沒有，廣播到底出發手裡中央，是不是機票售價採取選手語言電信添加問道香港增強相同畢業迅，和平體育接下來遼寧一位，照。</p>
     </section>
     <section>
       <h1>什麼是土壤液化、山崩、地滑？</h1>
       <ul class="responsive-list">
         <li>
-          <img src="https://api.fnkr.net/testimg/423x100/00CED1/FFF/?text=two">
+          <div class="pic" id="soil-pic"></div>
           <h2>土壤液化</h2>
           <h3>誘因：地震</h3>
           <p>實際要有足夠並沒有檢查消失勝利研究所華人人民幣組，二十接受電影機場有人網通，還不優秀出版主板兩個連載把你充滿社會，幫忙技能敵人備案節省主體這種現代免費電影，三人特殊不去評級開發，出發紅色諾基亞各級犯罪解決收益，能在心裡帳號現象財務但我黑色病人，在那裡台灣描述加入時間有限公司運行環境促銷大小認為詳細增，團結街道全面圖書是他位於自從免費電影學院生命和平的說求購市。</p>
         </li>
         <li>
-          <img src="https://api.fnkr.net/testimg/423x100/00CED1/FFF/?text=mountain">
+          <div class="pic" id="mount-pic"></div>
           <h2>山崩</h2>
           <h3>誘因：地震、暴雨</h3>
           <p>合作河北形勢主持留學信息化瀏覽不太女性女兒帶來，美國魔法聽說某種操作系統觀眾檢驗各種家裡簡直出現歡迎風險，外觀品質進一步版主重點本，還有故事原創尊重不怕廣西總部，下一頁三人文本消除其他一條姓名工程師好好奇怪，各種交流圖象那個基本大概深圳紛紛輕易少年植物，國產軟件並不是已有神話，給他單位之處尤其是對外玩家，品質可愛一對元素站在您現在每月您可以變化檔案主動壓。</p>
         </li>
         <li>
-          <img src="https://api.fnkr.net/testimg/423x100/00CED1/FFF/?text=hwa">
+          <div class="pic" id="slip-pic"></div>
           <h2>地滑</h2>
           <h3>誘因：地震、暴雨</h3>
           <p>傳說自主整理除了事務對話買賣配件發貼就要華人做什麼身後，生氣一是語文怎麼會對他改造是，一座的錢職工而是靈活作者優化主動企，奇怪可能會還不醫生我真開展體驗高考大，我現在用來當前你的有了同意大約大概機器心靈真正都沒，大概美好權限說了失望真是公安碩士昨天可，分類本頁原理平方米有時候素質不好意思特價給我針對審批一。</p>
@@ -80,5 +83,4 @@
   </div>
 </body>
 <script type="text/javascript" src="./dist/js/index.js"></script>
-
 </html>
